--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My assignment</title>
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- section 01 start from here -->
+    <section class="section-01">
+        <div class="container">
+            <div class="row">
+                <div class="half-width content">
+                    <div class="position">
+                        <span class="line"></span> 
+                        <h1> Stay Focused on <span class="text-color">Mission 2022</span></h1>
+                        <p class="disc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, molestiae necessitatibus. Cum similique ex laborum incidunt fuga hic consequatur reiciendis voluptatem, possimus quae, commodi maiores repellendus porro expedita dignissimos? Sed.</p>
+                        <a href="#" target="_blank" class="btn"><button class="btn">Explore Now</button></a>
+                        <p class="scroll-down">Scroll down to explore more about us</p>
+                    </div>
+                </div>
+                <div class="half-width img">
+                    <img src="./img/person/person-1.png" alt="picture">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section 01 start end here -->
 </body>
 </html>
