new section added

--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
     <section class="section-01">
         <div class="container">
             <div class="row">
-                <div class="half-width content">
-                    <div class="position">
+                <div class="half-width content">  
                         <span class="line"></span> 
                         <h1> Stay Focused on <span class="text-color">Mission 2022</span></h1>
                         <p class="disc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, molestiae necessitatibus. Cum similique ex laborum incidunt fuga hic consequatur reiciendis voluptatem, possimus quae, commodi maiores repellendus porro expedita dignissimos? Sed.</p>
                         <a href="#" target="_blank" class="btn"><button class="btn">Explore Now</button></a>
                         <p class="scroll-down">Scroll down to explore more about us</p>
                     </div>
-                </div>
                 <div class="half-width img">
                     <img src="./img/person/person-1.png" alt="picture">
                 </div>
@@ -29,5 +27,64 @@
         </div>
     </section>
     <!-- section 01 start end here -->
+    <!-- section 02 start from here -->
+    <section class="section-02">
+        <div class="container">
+            <h1>My Mission in <span class="text-color">2022</span></h1>
+            <div class="row">
+                <div class="child content01">
+                    <img src="./img/illustrators/illustrator-1.png" alt="logo" class="img-size">
+                    <h2>Mission</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At aspernatur earum iure molestiae! Beatae necessitatibus sequi, incidunt fugit quod maxime quibusdam a! Voluptatum pariatur amet labore. Omnis non esse sequi?</p>
+                </div>
+                <div class="child02 content01">
+                    <img src="./img/illustrators/illustrator-2.png" alt="logo" class="img-size">
+                    <h2>Vision</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At aspernatur earum iure molestiae! Beatae necessitatibus sequi, incidunt fugit quod maxime quibusdam a! Voluptatum pariatur amet labore. Omnis non esse sequi?</p>
+                </div>
+                <div class="child content01">
+                    <img src="./img/illustrators/illustrator-3.png" alt="logo" class="img-size">
+                    <h2>Goals</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At aspernatur earum iure molestiae! Beatae necessitatibus sequi, incidunt fugit quod maxime quibusdam a! Voluptatum pariatur amet labore. Omnis non esse sequi?</p>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+    <!-- section 02 end from here -->
+    <!-- section 03 start from here -->
+    <section class="section-03">
+        <div class="container">
+            <div class="row">
+                <div class="half-width">
+                    <img src="./img/pictures/coding.png" alt="picture">
+                </div>
+                <div class="half-width content">
+                    <h1>Develop </h1>
+                    <h1>Without Limits</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quod ab assumenda, mollitia doloribus placeat ratione perferendis voluptas id molestias explicabo eos deserunt corrupti enim velit error ut reiciendis dolore?</p>
+                    <a href=""><button class="btn">Read the Documentation</button></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section 03 end from here -->
+    <!-- section 04 start from here -->
+    <section class="section-04">
+        <div class="container">
+            <div class="row">
+                <div class="half-width content">
+                    <h1>Know our</h1>
+                    <h1>Global Community</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quod ab assumenda, mollitia doloribus placeat ratione perferendis voluptas id molestias explicabo eos deserunt corrupti enim velit error ut reiciendis dolore?</p>
+                    <a href=""><button class="btn">Read the Documentation</button></a>
+                </div>
+                <div class="half-width">
+                    <img src="./img/pictures/project.png" alt="picture">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section 04 end from here -->
 </body>
 </html>
