--- a/index.html
+++ b/index.html
@@ -86,5 +86,15 @@
         </div>
     </section>
     <!-- section 04 end from here -->
+    <!-- footer section start from here -->
+    <footer class="footer-section">
+        <div class="container">
+            <div class="footer-content">
+                <h1>Mission<span class="text-color"> 2022</span></h1>
+                <p>Hard work, Perseverance, and Determination for 2022</p>
+            </div>
+        </div>
+    </footer>
+    <!-- footer section end from here -->
 </body>
 </html>
