full project completed and added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="half-width content">  
                         <span class="line"></span> 
                         <h1> Stay Focused on <span class="text-color">Mission 2022</span></h1>
-                        <p class="disc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, molestiae necessitatibus. Cum similique ex laborum incidunt fuga hic consequatur reiciendis voluptatem, possimus quae, commodi maiores repellendus porro expedita dignissimos? Sed.</p>
+                        <p class="disc">A personal mission statement can help you identify your values and goals, defining what matters most to you professionally. It makes decision-making easier as well, as it clarifies whether the decisions you're making are in alignment with what you want for your life.</p>
                         <a href="#" target="_blank" class="btn"><button class="btn">Explore Now</button></a>
                         <p class="scroll-down">Scroll down to explore more about us</p>
                     </div>
@@ -35,17 +35,17 @@
                 <div class="child content01">
                     <img src="./img/illustrators/illustrator-1.png" alt="logo" class="img-size">
                     <h2>Mission</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At aspernatur earum iure molestiae! Beatae necessitatibus sequi, incidunt fugit quod maxime quibusdam a! Voluptatum pariatur amet labore. Omnis non esse sequi?</p>
+                    <p>A vision statement is the anchor point of any strategic plan. It outlines what an organization would like to ultimately achieve and gives purpose to the existence of the organization. A well-written vision statement should be short, simple, specific to your business, leave nothing open to interpretation. It should also have some ambition.</p>
                 </div>
                 <div class="child02 content01">
                     <img src="./img/illustrators/illustrator-2.png" alt="logo" class="img-size">
                     <h2>Vision</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At aspernatur earum iure molestiae! Beatae necessitatibus sequi, incidunt fugit quod maxime quibusdam a! Voluptatum pariatur amet labore. Omnis non esse sequi?</p>
+                    <p> A commonly asked question with a relatively simple answer, the main difference is the state in time. The vision statement is the company's desired future position for the business. Whereas, the mission statement is essentially the definition of a company's current business state and objectives.</p>
                 </div>
                 <div class="child content01">
                     <img src="./img/illustrators/illustrator-3.png" alt="logo" class="img-size">
                     <h2>Goals</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At aspernatur earum iure molestiae! Beatae necessitatibus sequi, incidunt fugit quod maxime quibusdam a! Voluptatum pariatur amet labore. Omnis non esse sequi?</p>
+                    <p>Life is full of challenges, successes and problems. Maybe you are extremely happy right now, maybe you are sick, you have problems in your relationship or you are struggling with financial challenges.</p>
                 </div>
                 
             </div>
@@ -62,7 +62,7 @@
                 <div class="half-width content">
                     <h1>Develop </h1>
                     <h1>Without Limits</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quod ab assumenda, mollitia doloribus placeat ratione perferendis voluptas id molestias explicabo eos deserunt corrupti enim velit error ut reiciendis dolore?</p>
+                    <p>You’re tired of second-guessing if your professional development efforts are meeting the mark.  You’re ready to build the professional learning your people need in order to be effective with young people. </p>
                     <a href=""><button class="btn">Read the Documentation</button></a>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                 <div class="half-width content">
                     <h1>Know our</h1>
                     <h1>Global Community</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quod ab assumenda, mollitia doloribus placeat ratione perferendis voluptas id molestias explicabo eos deserunt corrupti enim velit error ut reiciendis dolore?</p>
+                    <p>Esmeraldas, Ecuador, Rotary members helped grant more than 250 microloans and train more than 270 community members in sewing, baking, plumbing, microcredit, business management, and leadership.</p>
                     <a href=""><button class="btn">Read the Documentation</button></a>
                 </div>
                 <div class="half-width">
@@ -85,7 +85,31 @@
             </div>
         </div>
     </section>
-    <!-- section 04 end from here -->
+    <!-- section 04 end from here --> 
+
+    <!-- section 05 start from here -->
+    <section class="section-05">
+        <div class="container">
+            <h1 class="head-title">my <span class="text-color">lifestyle </span></h1>
+            <div class="line"></div>
+            <div class="row">
+                <div class="half-width content">
+                    <img src="./img/left img-1.jpg" alt="picture" class="img-size">
+                    <p class="title">lifestyle</p>
+                    <h1>More than just a music festival</h1>
+                    <p class="disc">The music festival emerged in England in the 18th century as an extension of urban concert life into a form of seasonal cultural festivity structured around a schedule of music performances or concerts.Esmeraldas..</p>
+                </div>
+                <div class="half-width content">
+                    <img src="./img/right img-1.jpg" alt="picture" class="img-size">
+                    <p class="title">lifestyle</p>
+                    <h1>Life tastes better with coffee</h1>
+                    <p class="disc">Coffee is a brewed drink prepared from roasted coffee beans, the seeds of berries from certain flowering plants in the Coffea genus. From the coffee fruit, the seeds are separated to produce a stable, raw product: unroasted green coffee.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section 05 start from here -->
+
     <!-- footer section start from here -->
     <footer class="footer-section">
         <div class="container">
